{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 50,
  "lineage": "5a586956-0704-d395-c785-c3485ebff847",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "dfltrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:route-table/rtb-0e3871d5fed6b2f4b",
            "default_route_table_id": "rtb-0e3871d5fed6b2f4b",
            "id": "rtb-0e3871d5fed6b2f4b",
            "owner_id": "442222453508",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.1.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07b519027d6123b47",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dfltrt"
            },
            "tags_all": {
              "Name": "dfltrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myeip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.Tier3-nat",
            "aws_subnet.public-1",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffd4b62bdd057d54",
            "association_id": "eipassoc-0d15990c71641709e",
            "domain": "vpc",
            "id": "eipalloc-0ffd4b62bdd057d54",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-023c22f756cbb5d78",
            "private_dns": "ip-10-0-1-27.ap-south-1.compute.internal",
            "private_ip": "10.0.1.27",
            "public_dns": "ec2-15-207-196-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.196.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:442222453508:instance/i-094203600d47d9678",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094203600d47d9678",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "neww-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae99711479989d50",
            "private_dns": "ip-10-0-3-144.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0494bc95c452d1454",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0052dbe8e9ae1153d",
            "tags": {
              "Name": "db-instance"
            },
            "tags_all": {
              "Name": "db-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e1df6c1b0329bac"
            ]
          },
          "dependencies": [
            "aws_security_group.private-sg",
            "aws_security_group.public-sg",
            "aws_subnet.private-1",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:442222453508:instance/i-09edd3bb0c2d8de32",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09edd3bb0c2d8de32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "neww-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e4a582b0b495a1d",
            "private_dns": "ip-10-0-1-55.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_ip": "13.201.52.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03355ba2931f397fd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0974fd835d1bfa76f",
            "tags": {
              "Name": "web-1-instance"
            },
            "tags_all": {
              "Name": "web-1-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001173850143af85b"
            ]
          },
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_subnet.public-1",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:442222453508:instance/i-0cafbe4b9f459f006",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cafbe4b9f459f006",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "neww-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0265d1e9045932679",
            "private_dns": "ip-10-0-2-225.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.225",
            "public_ip": "3.108.51.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c5b5fdb4f968da1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0778df0fd3417e1a5",
            "tags": {
              "Name": "web2-instance-Tier3"
            },
            "tags_all": {
              "Name": "web2-instance-Tier3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-001173850143af85b"
            ]
          },
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_subnet.public-2",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:internet-gateway/igw-0f50077e8bc6d72d3",
            "id": "igw-0f50077e8bc6d72d3",
            "owner_id": "442222453508",
            "tags": {
              "Name": "Tier3-igw"
            },
            "tags_all": {
              "Name": "Tier3-igw"
            },
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "dependencies": [
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Tier3-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/Tier3-alb/381a522c2b2d6406",
            "arn_suffix": "app/Tier3-alb/381a522c2b2d6406",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Tier3-alb-1631927677.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/Tier3-alb/381a522c2b2d6406",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Tier3-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00151814f44ad7c5e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0778df0fd3417e1a5"
              },
              {
                "subnet_id": "subnet-0974fd835d1bfa76f"
              }
            ],
            "subnets": [
              "subnet-0778df0fd3417e1a5",
              "subnet-0974fd835d1bfa76f"
            ],
            "vpc_id": "vpc-05c8d59384d2ae87b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:listener/app/Tier3-alb/381a522c2b2d6406/90409d0f9e524c31",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/Tier3-tg/9eeaebca0f16e1c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:listener/app/Tier3-alb/381a522c2b2d6406/90409d0f9e524c31",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:loadbalancer/app/Tier3-alb/381a522c2b2d6406",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Tier3-alb",
            "aws_lb_target_group.Tier3-tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Tier3-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/Tier3-tg/9eeaebca0f16e1c5",
            "arn_suffix": "targetgroup/Tier3-tg/9eeaebca0f16e1c5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/Tier3-tg/9eeaebca0f16e1c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Tier3-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "dependencies": [
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attach-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/Tier3-tg/9eeaebca0f16e1c5-20240130104358727500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/Tier3-tg/9eeaebca0f16e1c5",
            "target_id": "i-09edd3bb0c2d8de32"
          },
          "dependencies": [
            "aws_instance.web-1",
            "aws_lb_target_group.Tier3-tg",
            "aws_security_group.public-sg",
            "aws_subnet.public-1",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attach-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/Tier3-tg/9eeaebca0f16e1c5-20240130104358541600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:442222453508:targetgroup/Tier3-tg/9eeaebca0f16e1c5",
            "target_id": "i-0cafbe4b9f459f006"
          },
          "dependencies": [
            "aws_instance.web-2",
            "aws_lb_target_group.Tier3-tg",
            "aws_security_group.public-sg",
            "aws_subnet.public-2",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Tier3-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ffd4b62bdd057d54",
            "association_id": "eipassoc-0d15990c71641709e",
            "connectivity_type": "public",
            "id": "nat-07b519027d6123b47",
            "network_interface_id": "eni-023c22f756cbb5d78",
            "private_ip": "10.0.1.27",
            "public_ip": "15.207.196.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0974fd835d1bfa76f",
            "tags": {
              "Name": "Tier3-nat"
            },
            "tags_all": {
              "Name": "Tier3-nat"
            }
          },
          "dependencies": [
            "aws_eip.myeip",
            "aws_internet_gateway.igw",
            "aws_subnet.public-1",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Tier3-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:route-table/rtb-0d8ce76df769ec28e",
            "id": "rtb-0d8ce76df769ec28e",
            "owner_id": "442222453508",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f50077e8bc6d72d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tier3-rt"
            },
            "tags_all": {
              "Name": "Tier3-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f32b8b9d286c62",
            "route_table_id": "rtb-0d8ce76df769ec28e",
            "subnet_id": "subnet-0974fd835d1bfa76f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Tier3-rt",
            "aws_subnet.public-1",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:security-group/sg-00151814f44ad7c5e",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00151814f44ad7c5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "442222453508",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:security-group/sg-02e1df6c1b0329bac",
            "description": "Allow web tier and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e1df6c1b0329bac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001173850143af85b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "442222453508",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:security-group/sg-001173850143af85b",
            "description": "Allow web and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001173850143af85b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "442222453508",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:subnet/subnet-0052dbe8e9ae1153d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0052dbe8e9ae1153d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442222453508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "dependencies": [
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:subnet/subnet-0974fd835d1bfa76f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0974fd835d1bfa76f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442222453508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "dependencies": [
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:subnet/subnet-0778df0fd3417e1a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0778df0fd3417e1a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442222453508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-05c8d59384d2ae87b"
          },
          "dependencies": [
            "aws_vpc.Tier3-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Tier3-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:442222453508:vpc/vpc-05c8d59384d2ae87b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b38c837998bfac4",
            "default_route_table_id": "rtb-0e3871d5fed6b2f4b",
            "default_security_group_id": "sg-0fb95915130a1ecd6",
            "dhcp_options_id": "dopt-070d8654d588070a3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c8d59384d2ae87b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e3871d5fed6b2f4b",
            "owner_id": "442222453508",
            "tags": {
              "Name": "Tier3-VPC"
            },
            "tags_all": {
              "Name": "Tier3-VPC"
            }
          }
        }
      ]
    }
  ]
}